--- a/hellov1deploy.yaml
+++ b/hellov1deploy.yaml
@@ -15,3 +15,14 @@ spec:
      containers:
      - name: hellov1
        image: gcr.io/google-samples/hello-app:1.0
+---
+apiVersion: v1
+kind: Service
+metadata:
+ name: hello
+spec:
+ selector:
+   app: hellov1
+ ports:
+ - port: 80
+   targetPort: 8080
